--- a/.github/.golangci.yml
+++ b/.github/.golangci.yml
@@ -17,7 +17,7 @@ formatters:
       # with the given prefixes are grouped after 3rd-party packages.
       # Default: []
       local-prefixes:
-        - github.com/my/project
+        - github.com/MyCarrier-DevOps/goLibMyCarrier
 
     golines:
       # Target maximum line length.
