fix: correct config file path for GitVersion in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,4 +28,4 @@ jobs:
       with:
         useConfigFile: true
         disableCache: true
-        configFilePath: .github/GitVersion.yml
+        configFilePath: .github/Gitversion.yml
