--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
       - '**'
       - '!docs/**'
       - '!.github/**'
+      - '!README.md'
     branches:
       - main
   pull_request: 
@@ -12,6 +13,7 @@ on:
       - '**'
       - '!docs/**'
       - '!.github/**'
+      - '!README.md'
     branches: 
       - main
 permissions:
