--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
     strategy:
       matrix:
         module: [argocdclient, auth, clickhouse, github, kafka, logger, otel, vault, yaml]
+    permissions:
+      contents: read
+      actions: read
+      pull-requests: write # needed for coverage comments
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
@@ -63,90 +67,45 @@ jobs:
           go mod tidy
           golangci-lint run --config ../.github/.golangci.yml --timeout 5m ./...
 
+  # Unified coverage reporting job
   code-coverage:
-    name: "Code coverage report"
-    if: github.event_name == 'pull_request' # Only run on pull requests
+    name: "Generate coverage report"
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    needs: unit-tests # Depends on all unit test jobs completing
+    needs: unit-tests
+    continue-on-error: true
+    strategy:
+      matrix:
+        module: [argocdclient, auth, clickhouse, github, kafka, logger, otel, vault, yaml]
     permissions:
       contents: read
-      actions: read # to download code coverage results from unit test jobs
-      pull-requests: write # write permission needed to comment on PR
+      actions: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       
-      # Download all coverage artifacts
-      - name: Download coverage artifacts
+      # Download coverage artifact for this specific module
+      - name: Download coverage for ${{ matrix.module }}
         uses: actions/download-artifact@v4
         with:
-          pattern: code-coverage-*
-          path: coverage-artifacts
-          merge-multiple: false
+          name: code-coverage-${{ matrix.module }}
+          path: coverage-${{ matrix.module }}
       
-      # Debug: List downloaded artifacts
-      - name: Debug coverage artifacts
-        run: |
-          echo "Contents of coverage-artifacts directory:"
-          find coverage-artifacts -type f -name "*.out" || echo "No .out files found"
-          ls -la coverage-artifacts/ || echo "coverage-artifacts directory not found"
-      
-      # Merge all coverage files into one
-      - name: Merge coverage files
-        run: |
-          mkdir -p merged-coverage
-          echo "mode: atomic" > merged-coverage/coverage.txt
-          
-          # Find all coverage.out files and merge them
-          find coverage-artifacts -name "coverage.out" -type f | while read -r file; do
-            if [ -f "$file" ]; then
-              echo "Processing coverage from $file"
-              tail -n +2 "$file" >> merged-coverage/coverage.txt
-            fi
-          done
-          
-          echo "Merged coverage file created"
-          if [ -f "merged-coverage/coverage.txt" ]; then
-            wc -l merged-coverage/coverage.txt
-            echo "Sample lines from coverage.txt:"
-            head -5 merged-coverage/coverage.txt
-          else
-            echo "ERROR: merged coverage file not created"
-            exit 1
-          fi
-      
-      # Upload merged coverage as artifact
-      - name: Upload merged coverage
+      # Upload module-specific coverage with unique name
+      - name: Upload ${{ matrix.module }} coverage
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage
-          path: merged-coverage/coverage.txt
+          name: coverage-${{ matrix.module }}-final
+          path: coverage-${{ matrix.module }}/coverage.out
       
-      # Check if we have coverage data before running the report
-      - name: Check coverage file
-        id: check-coverage
-        run: |
-          if [ -f "merged-coverage/coverage.txt" ] && [ -s "merged-coverage/coverage.txt" ]; then
-            lines=$(wc -l < merged-coverage/coverage.txt)
-            if [ "$lines" -gt 1 ]; then
-              echo "has-coverage=true" >> $GITHUB_OUTPUT
-              echo "Coverage file has $lines lines"
-            else
-              echo "has-coverage=false" >> $GITHUB_OUTPUT
-              echo "Coverage file is empty or only has header"
-            fi
-          else
-            echo "has-coverage=false" >> $GITHUB_OUTPUT
-            echo "No coverage file found"
-          fi
-      
-      # Use the coverage report action only if we have coverage data
-      - name: Generate coverage report
-        if: steps.check-coverage.outputs.has-coverage == 'true'
+      # Generate coverage report for this specific module
+      - name: Generate ${{ matrix.module }} coverage report
         uses: fgrosse/go-coverage-report@v1.2.0
         with:
-          coverage-artifact-name: "code-coverage"
-          coverage-file-name: "coverage.txt"
-          root-package: "github.com/MyCarrier-DevOps/goLibMyCarrier"
+          coverage-artifact-name: "coverage-${{ matrix.module }}-final"
+          coverage-file-name: "coverage.out"
+          root-package: "github.com/MyCarrier-DevOps/goLibMyCarrier/${{ matrix.module }}"
+          trim: "github.com/MyCarrier-DevOps/goLibMyCarrier/"
 
   # Check that all unit tests passed
   unit-tests-check:
