--- a/.github/.golangci.yml
+++ b/.github/.golangci.yml
@@ -100,6 +100,8 @@ linters:
         - fieldalignment
     nakedret:
       max-func-lines: 1
+    nestif:
+      min-complexity: 10
     tagliatelle:
       case:
         rules:
