--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ jobs:
   unit-tests:
     name: unit-test-${{ matrix.module }}
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
       matrix:
         module: [argocdclient, auth, clickhouse, github, kafka, logger, otel, vault, yaml]
@@ -35,17 +34,21 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: ^1.25
-      
       - name: Test ${{ matrix.module }} module
         working-directory: ${{ matrix.module }}
         run: |
           go mod download
           go test -cover -coverprofile=coverage.out -covermode=atomic ./...
+          go tool cover -func=${{ matrix.module }}-coverage.out
+      - name: check ${{ matrix.module }} test coverage
+        uses: vladopajic/go-test-coverage@v2
+        with:
+          profile: ./${{ matrix.module }}-coverage.out
+          threshold-total: 75
       
   lint:
     name: lint-${{ matrix.module }}
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
       matrix:
         module: [argocdclient, auth, clickhouse, github, kafka, logger, otel, vault, yaml]
@@ -74,6 +77,7 @@ jobs:
           echo "Unit tests completed"
           # This job will fail if any of the matrix unit test jobs failed
           if [[ "${{ needs.unit-tests.result }}" != "success" ]]; then
+
             echo "Some unit tests failed"
             exit 1
           fi
