--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           go mod download
           go test -cover -coverprofile=coverage.out -covermode=atomic ./...
-          go tool cover -func=${{ matrix.module }}-coverage.out
+          go tool cover -func=../${{ matrix.module }}-coverage.out
       - name: check ${{ matrix.module }} test coverage
         uses: vladopajic/go-test-coverage@v2
         with:
