--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,14 +38,13 @@ jobs:
         working-directory: ${{ matrix.module }}
         run: |
           go mod download
-          go test -cover -coverprofile=./coverage-${{ matrix.module }}.out -covermode=atomic ./...
-          go tool cover -func=./coverage-${{ matrix.module }}.out
+          go test -cover -coverprofile=../coverage-${{ matrix.module }}.out -covermode=atomic ./...
+          go tool cover -func=../coverage-${{ matrix.module }}.out
       - name: check ${{ matrix.module }} test coverage
         uses: vladopajic/go-test-coverage@v2
         with:
           profile: ./coverage-${{ matrix.module }}.out
           threshold-total: 75
-          source-dir: ./${{ matrix.module }}
       
   lint:
     name: lint-${{ matrix.module }}
