fix: add source-dir parameter for coverage report in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           profile: ./coverage-${{ matrix.module }}.out
           threshold-total: 75
+          source-dir: ./${{ matrix.module }}
       
   lint:
     name: lint-${{ matrix.module }}
