--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: discover
     strategy:
+      fail-fast: false
       matrix:
         module: ${{ fromJson(needs.discover.outputs.modules) }}
     permissions:
@@ -71,6 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: discover
     strategy:
+      fail-fast: false
       matrix:
         module: ${{ fromJson(needs.discover.outputs.modules) }}
     steps:
@@ -91,6 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: discover
     strategy:
+      fail-fast: false
       matrix:
         module: ${{ fromJson(needs.discover.outputs.modules) }}
     steps:
