feat: Add root go.mod and fix CI to publish unified versions
- Add root go.mod to make goLibMyCarrier a valid Go module
- Add goLibMyCarrier.go with package documentation
- Fix CI workflow to create main library tag before submodule tags
- Ensures all packages (main + submodules) share the same version number

This resolves the version mismatch issue where the main library
was at v1.3.5 while submodules were at v1.3.42.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,6 +190,11 @@ jobs:
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
         
+        # Create and push main library tag first
+        echo "Creating main library tag v$VERSION"
+        git tag -a "v$VERSION" -m "Release goLibMyCarrier v$VERSION"
+        git push origin "v$VERSION"
+        
         # Create and push tags for each module dynamically
         MODULE_LIST=""
         for module in $(echo "$MODULES" | jq -r '.[]'); do
